# echoSMs

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  LICENSE  README.md  WGFAST2025_demo.ipynb  Workshop demo.ipynb  examples.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  scattermodels.py  schema_doc.html  search.html  sitemap.xml  target definitions.toml
.github/workflows/: build-docs.yml  publish-to-pypi.yml  run-tests.yml  update-spec0.yml
BenchMark_Data/: Benchmark_Frequency_TS.csv  README.md
ExactSolutions/Sphere/Fluid/: Anderson_fluid.py  README.md
anatomical_data_store/: index.html
api_datastore/: index.html
api_reference/: index.html
api_scattering_models/: index.html
api_utilities/: index.html
benchmark_data/: index.html
contributing/: index.html
conventions/: index.html
data_store/resources/: all-datasets-automatically-generated.json  example_metadata A.json  example_metadata A.toml  example_metadata B.json  example_metadata B.toml  example_metadata C.json  example_metadata C.toml  example_metadata D.json  example_metadata D.toml  example_metadata.json  example_metadata.toml
data_store/schema/v1/: anatomical_data_store.json
data_store/src/: API notes.md  api_echosms_example.py  api_examples.py  convert_comsol_to_datastore.py  convert_echosms_to_datastore.py  echosms_webapi.py  format_metadata.py  requirements.txt  validate_toml.py
data_store_models/: index.html
datastoreAPI/: datastore_api_openapi.json  index.html
datastore_API/: index.html
datastore_anatomical/: index.html
datastore_intro/: index.html
datastore_models/: index.html
datastore_schema/: index.html
datastore_schema_browser/: index.html
datastore_web_API/: index.html
developing/: index.html
docs/: WGFAST2025_demo.ipynb  anatomical_data_store.md  api_datastore.md  api_reference.md  api_scattering_models.md  api_utilities.md  benchmark_data.md  contributing.md  conventions.md  datastoreAPI.md  datastore_API.md  datastore_anatomical.md  datastore_api_openapi.json  datastore_intro.md  datastore_models.md  datastore_schema.md  datastore_schema_browser.md  datastore_web_API.md  developing.md  historical_notes.md  index.md  other_software.md  training.md  tutorial.ipynb  usage.md
docs/source/: contributing.md
docs/src/: get_datastore_api_json.py  macro_build_schema_doc.py  macros.py  make_coordinate_system_figure.py  make_coordinate_system_figure_vedo.py  make_datastore_schema_md.py  make_outline_shape_figure.py  schema_to_markdown.py
docs/training/: choosing_a_model.md  links.md  training.md
docs/training/2026 WGFAST workshop/: exercises.md  material.md  models.md  overview.md  selecting.md  shapes.md
historical_notes/: index.html
other_software/: index.html
schema/: data_store_schema.md  schema_doc.html
schema/data_store_schema/: index.html
schemas/anatomical_data_store/v1/: anatomical_data_store.json
search/: search_index.json
src/: example_code.py  macros.py  make_coordinate_system_figure.py  make_coordinate_system_figure_vedo.py  make_datastore_schema_md.py  make_outline_shape_figure.py  schema_to_markdown.py
src/echosms/: __init__.py  bemmodel.py  benchmarkdata.py  constants.py  conversions.py  dcmmodel.py  dwbamodel.py  dwbautils.py  esmodel.py  hpmodel.py  jechetaldata.py  kamodel.py  krmdata.py  krmmodel.py  mssmodel.py  plotting.py  psmsmodel.py  ptdwbamodel.py  referencemodels.py  scattermodelbase.py  scattermodels.py  sdwbamodel.py  shape_conversions.py  test_conversion.py  utils.py  utils_datastore.py
src/echosms/datastore/: api_echosms_example.py  api_examples.py  convert_comsol_to_datastore.py  convert_echosms_to_datastore.py  format_metadata.py  process_for_datastore.py  validate_toml.py
src/echosms/resources/: DWBA_shapes.toml  KRM_shapes.toml  NOAA_KRM_shapes.toml  NOAA_KRM_ts_Bocaccio.csv  NOAA_KRM_ts_Cod.csv  NOAA_KRM_ts_Sardine.csv  NOAA_KRM_ts_SkipjackTuna_46.54cm.csv  SDWBA_shapes.toml  model definitions.toml  target definitions.toml
src/echosms/resources/BenchMark_Data/: Benchmark_Angle_TS.csv  README.md
src/echosms/resources/Jechetal_allmodels/: Figure_01_Gas-sphere.csv  Figure_01_PressRel-sphere.csv  Figure_01_Rigid-sphere.csv  Figure_01_WeakScatt-sphere.csv  Figure_02_Gas-shellsphere.csv  Figure_02_PressRel-shellsphere.csv  Figure_02_WeakScatt-shellsphere.csv  Figure_03-04_Gas-Pspheroid.csv  Figure_03-04_PressRel-Pspheroid.csv  Figure_03-04_Rigid-Pspheroid.csv  Figure_03-04_WeakScatt-Pspheroid.csv  Figure_05_Gas-Pspheroid_angle-038kHz.csv  Figure_05_PressRel-Pspheroid_angle-038kHz.csv  Figure_05_Rigid-Pspheroid_angle-038kHz.csv  Figure_05_WeakScatt-Pspheroid_angle-038kHz.csv  Figure_06_Gas-Cylinder.csv  Figure_06_PressRel-Cylinder.csv  Figure_06_Rigid-Cylinder.csv  Figure_06_WeakScatt-Cylinder.csv  Figure_07-08_Gas-Cylinder_angle-038kHz.csv  Figure_07-08_PressRel-Cylinder_angle-038kHz.csv  Figure_07-08_Rigid-Cylinder_angle-038kHz.csv  Figure_07-08_WeakScatt-Cylinder_angle-038kHz.csv  TS_MeanDeviations_AllModels.csv
src/echosms/viewer/: api.py  app.py  geometry.py
src/otherCode/Chu_matlab/: readme.md
src/otherCode/Chu_matlab/elliptical DWBA/: Model Description.docx  example_DWBA_ellipsolid.m  readme.md
src/otherCode/Chu_matlab/infinitely long cylinders/: README.txt  cylbesldj.m  cylbesldy.m  cylbeslj.m  cylbesly.m  elastic_fc.m  fluid_fc.m  readme.md  rgd_sft_fc.m  shell_fc.m  test_models.m
src/otherCode/Clay_Files/: README.md
src/otherCode/ExactSolutions/: README.md
src/otherCode/Furusawa_PSM/: KS25A4.bas  KS25A4.txt  LF60609  SCTLIBV3.bas  SCTLIBV3.txt  readme.md
tests/: test_datastore.py  test_import.py  test_misc.py  test_model_outputs.py  test_parameter_checking.py  test_plotting.py
training/: index.html
training/2026 WGFAST workshop/material/: index.html
training/2026 WGFAST workshop/models/: index.html
training/2026 WGFAST workshop/overview/: index.html
training/2026 WGFAST workshop/selecting/: index.html
training/2026 WGFAST workshop/shapes/: index.html
training/links/: index.html
training/training/: index.html
usage/: index.html
(+210 files in other folders)
