[build-system]
requires = ["hatchling", 'hatch-vcs']
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/echosms"]

[project]
name = 'echosms'
license = {file = "LICENSE"}
keywords = ["acoustic", "backscatter", "model"]
authors = [
  { name="Mike Jech"},
  { name="Gavin Macaulay"}
]
description = 'Acoustic backscattering models used in aquatic ecosystem research'
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
	"numpy",
	"scipy",
	"pandas",
  "xarray",
  'tomli >= 1.1.0; python_version < "3.11"',
  'backports.strenum >= 1.3.1; python_version < "3.11"',
  'trimesh',
  "shapely",
  "mapbox_earcut",
  'spheroidalwavefunctions',
  'tqdm',
  'mapply',
]
classifiers = [
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Science/Research',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Programming Language :: Python :: 3.14',
    'Topic :: Scientific/Engineering',
    'Topic :: Scientific/Engineering :: Physics',
    'Topic :: Scientific/Engineering :: Oceanography',
]
dynamic = [ 'version']

[tool.hatch.version]
source = 'vcs'

[tool.hatch.version.raw-options]
local_scheme = "no-local-version"  # otherwise the non-tagged version is not accepted by testpypi

[tool.pytest.ini_options]
testpaths = ['tests',]
addopts = ["--import-mode=importlib",]

[project.optional-dependencies]
dev = [
  "mkdocstrings[python]",
  "matplotlib",
  "mkdocs-material",
  "twine",
  "pytest",
  "jsonschema_rs",
  "orjson",
  "rtoml",
  "rich"
]


[project.urls]
Homepage = 'https://github.com/ices-tools-dev/echoSMs'
Issues = 'https://github.com/ices-tools-dev/echoSMs/issues'
Documentation = 'https://ices-tools-dev.github.io/echoSMs'
Repository = 'https://github.com/ices-tools-dev/echoSMs'
Discussions = 'https://github.com/ices-tools-dev/echoSMs/discussions'
