[build-system]
requires = ["hatchling", 'hatch-vcs']
build-backend = "hatchling.build"

[project]
name = 'echosms'
import-names = ["echosms"]
license = "MIT"
license-files = ["LICENSE",]
keywords = ["acoustic", "backscatter", "model"]
authors = [
  { name="Mike Jech"},
  { name="Gavin Macaulay"}
]
description = 'Acoustic backscattering models used in aquatic ecosystem research'
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
	"numpy>=2.2.0",
	"scipy>=1.15.0",
	"pandas>=2.3.0",
	"xarray>=2024.10.0",
	'trimesh',
	'pymeshlab',
	"shapely",
	"mapbox_earcut",
	'spheroidalwavefunctions',
	'tqdm',
	'mapply',
	"requests",
	"rtoml",
	"urllib3",
	"matplotlib>=3.10.0",
	"rich",
	"jsonschema-rs",
	"orjson",
	"manifold3d",
	"pre-commit>=4.6.0",
]
classifiers = [
    'Development Status :: 4 - Beta',
    'Environment :: Console',
    'Intended Audience :: Science/Research',
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Programming Language :: Python :: 3.14',
    'Topic :: Scientific/Engineering',
    'Topic :: Scientific/Engineering :: Physics',
    'Topic :: Scientific/Engineering :: Oceanography',
    'Natural Language :: English',
]
dynamic = [ 'version']

[project.scripts]
echosms-view = "echosms.viewer.app:main"
validate-toml = "echosms.datastore.validate_toml:main"
process-for-datastore = "echosms.datastore.process_for_datastore:main"

[project.urls]
Homepage = 'https://github.com/ices-tools-dev/echoSMs'
Issues = 'https://github.com/ices-tools-dev/echoSMs/issues'
Documentation = 'https://ices-tools-dev.github.io/echoSMs'
Repository = 'https://github.com/ices-tools-dev/echoSMs'

[dependency-groups]
dev = [
    "json-schema-for-humans>=1.5.1",
    "mkdocs>=1.6.1, <2",
    "mkdocs-glightbox>=0.5.2",
    "mkdocs-macros-plugin>=1.5.0",
    "mkdocs-material>=9.7.6, <10",
    "mkdocstrings-python>=2.0.3",
    "pytest>=9.0.3",
    "pytest-xdist>=3.8.0",
    "spyder-kernels>=3.1.4",
    "zensical>=0.0.38",
]

[tool.hatch.version]
source = 'vcs'

[tool.hatch.build.targets.wheel]
packages = ["src/echosms"]

[tool.hatch.version.raw-options]
local_scheme = "no-local-version"  # otherwise the non-tagged version is not accepted by testpypi

[tool.uv]
exclude-newer = "7 days"
exclude-newer-package = { zensical = "1 day" }
audit = {'malware-check' = true}
preview-features = ["audit-command", "malware-check"]  # silences the preview features warnings


[tool.pytest.ini_options]
testpaths = ['tests',]
addopts = ["--import-mode=importlib",]
